--- a/screen.css
+++ b/screen.css
@@ -46,7 +46,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block; }
 
 body {
-  font-family: sans-serif;
+  font-family: "times new roman";
   color: #2a2a2a; }
 
 a {
@@ -58,5 +58,5 @@ a {
   padding: 50px; }
 
 h1 {
-  font-size: 26pt;
+  font-size: 36;
 }
