--- a/screen.css
+++ b/screen.css
@@ -46,7 +46,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block; }
 
 body {
-  font-family: times;
+  font-family: "times";
   color: #2a2a2a; }
 
 a {
