--- a/screen.css
+++ b/screen.css
@@ -58,6 +58,5 @@ a {
   padding: 50px; }
 
 h1 {
-  style="font-family:Times New Roman"
-  font-size: 36;
+  style="font-family:Times New Roman;font-size: 36;"
 }
