--- a/screen.css
+++ b/screen.css
@@ -46,6 +46,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block; }
 
 body {
+  background-color: #05B0DA
   font-family: serif;
   color: #2a2a2a; }
 
@@ -58,5 +59,6 @@ a {
   padding: 50px; }
 
 h1 {
-  style="font-family:Times New Roman;font-size: 36;"
+  font-family: "Times New Roman";
+  font-size: 36;
 }
