--- a/screen.css
+++ b/screen.css
@@ -46,7 +46,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block; }
 
 body {
-  background-color: #05B0DA
+  background-color: #05B0DA;
   font-family: serif;
   color: #2a2a2a; }
 
