--- a/screen.css
+++ b/screen.css
@@ -46,9 +46,9 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block; }
 
 body {
-  background-color: #05B0DA;
   font-family: serif;
-  color: #2a2a2a; }
+  color: #2a2a2a;
+  background-color: #05B0DA; }
 
 a {
   color: #0388a6; }
