--- a/screen.css
+++ b/screen.css
@@ -56,7 +56,10 @@ a {
     color: #009ce0; }
 
 h1 {
-  font-size: 300%; }
+  font-size: 250%; }
+
+p {
+  font-size: 115%; }
 
 #main {
   padding: 50px; }
