--- a/screen.css
+++ b/screen.css
@@ -59,6 +59,14 @@ h1 {
   color: navy;
   font-size: 4em; }
 
+h2 {
+  font-size: 2em;
+}
+
+h3 {
+  font-size: 2em;
+}
+
 p {
   color: #228B22;
   font-size: 20px;
